將登入&註冊頁背景overflow:hidden註解並將背景的BGS/BGT改成position fixed & container:min-height: 100vh

--- a/client/styles/WGS-login.module.scss
+++ b/client/styles/WGS-login.module.scss
@@ -1,7 +1,7 @@
 @import '@/styles/globals-var.scss';
 
 .WGS-loginContainer{
-    height: 100%;
+    min-height: 100vh;
     width: 100%;
     overflow: hidden;
     display: flex;
@@ -16,7 +16,7 @@
 }
 
 .WGS-loginBgS{
-    position: absolute;
+    position: fixed;
     right: 0;
     top: 10vh;
     color: rgba(255, 255, 255, 0.37);
@@ -29,7 +29,7 @@
 }
 
 .WGS-loginBgT{
-    position: absolute;
+    position: fixed;
     right: 0;
     // top: 60vh;
     bottom: 15vh;
@@ -159,7 +159,7 @@
 /* 會員註冊 */
 .WGS-registerinContainer{
     position: relative;
-    height: 100vh;
+    min-height: 100vh;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -168,7 +168,7 @@
     background-size: cover;
     margin: 0;
     padding: 0;
-    overflow: hidden;
+    // overflow: hidden;
 }
 
 .WGS-registerinCard {
